// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-exit 1`] = `[]`;

exports[`default renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-stderr 1`] = `[]`;

exports[`default renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-stdout 1`] = `
[
  "[?25l",
  "[?2026h[2m◼[22m This task will output a hyperlink.
[?2026l",
  "[?2026h[2K[1A[2K[G[33m❯[39m This task will output a hyperlink.
[?2026l",
  "[?2026h[G[2K[G  › ]8;;https://listr2.kilic.devlistr2]8;;
[K[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[G[32m✔[39m This task will output a hyperlink.
[?2026l",
  "[?2026h[2K[1A[2K[G[?2026l",
  "[32m✔[39m This task will output a hyperlink.
",
  "[?25h",
]
`;

exports[`default renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-exit 1`] = `[]`;

exports[`default renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-stderr 1`] = `[]`;

exports[`default renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-stdout 1`] = `
[
  "[?25l",
  "[?2026h[2m◼[22m This task will output a colored hyperlink.
[?2026l",
  "[?2026h[2K[1A[2K[G[33m❯[39m This task will output a colored hyperlink.
[?2026l",
  "[?2026h[G[2K[G  › [32m]8;;https://listr2.kilic.devlistr2]8;;[39m
[K[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[G[32m✔[39m This task will output a colored hyperlink.
[?2026l",
  "[?2026h[2K[1A[2K[G[?2026l",
  "[32m✔[39m This task will output a colored hyperlink.
",
  "[?25h",
]
`;

exports[`default renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-exit 1`] = `[]`;

exports[`default renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-stderr 1`] = `[]`;

exports[`default renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-stdout 1`] = `
[
  "[?25l",
  "[?2026h[2m◼[22m This task will output a hyperlink next to a cursor code.
[?2026l",
  "[?2026h[2K[1A[2K[G[33m❯[39m This task will output a hyperlink next to a cursor code.
[?2026l",
  "[?2026h[G[2K[G  › ]8;;https://listr2.kilic.devlistr2]8;;
[K[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[G[32m✔[39m This task will output a hyperlink next to a cursor code.
[?2026l",
  "[?2026h[2K[1A[2K[G[?2026l",
  "[32m✔[39m This task will output a hyperlink next to a cursor code.
",
  "[?25h",
]
`;

exports[`simple renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-exit 1`] = `[]`;

exports[`simple renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-stderr 1`] = `[]`;

exports[`simple renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-stdout 1`] = `
[
  "[33m❯[39m This task will output a hyperlink.
",
  "› ]8;;https://listr2.kilic.devlistr2]8;;
",
  "[32m✔[39m This task will output a hyperlink.
",
]
`;

exports[`simple renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-exit 1`] = `[]`;

exports[`simple renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-stderr 1`] = `[]`;

exports[`simple renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-stdout 1`] = `
[
  "[33m❯[39m This task will output a colored hyperlink.
",
  "› [32m]8;;https://listr2.kilic.devlistr2]8;;[39m
",
  "[32m✔[39m This task will output a colored hyperlink.
",
]
`;

exports[`simple renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-exit 1`] = `[]`;

exports[`simple renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-stderr 1`] = `[]`;

exports[`simple renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-stdout 1`] = `
[
  "[33m❯[39m This task will output a hyperlink next to a cursor code.
",
  "› [2K]8;;https://listr2.kilic.devlistr2]8;;
",
  "[32m✔[39m This task will output a hyperlink next to a cursor code.
",
]
`;

exports[`test renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-exit 1`] = `[]`;

exports[`test renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-stderr 1`] = `[]`;

exports[`test renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will output a hyperlink.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will output a hyperlink."]}}
",
  "{"event":"OUTPUT","data":"\\u001b]8;;https://listr2.kilic.dev\\u0007listr2\\u001b]8;;\\u0007","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will output a hyperlink.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will output a hyperlink."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will output a hyperlink.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will output a hyperlink."]}}
",
]
`;

exports[`test renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-exit 1`] = `[]`;

exports[`test renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-stderr 1`] = `[]`;

exports[`test renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will output a colored hyperlink.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will output a colored hyperlink."]}}
",
  "{"event":"OUTPUT","data":"\\u001b[32m\\u001b]8;;https://listr2.kilic.dev\\u0007listr2\\u001b]8;;\\u0007\\u001b[39m","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will output a colored hyperlink.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will output a colored hyperlink."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will output a colored hyperlink.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will output a colored hyperlink."]}}
",
]
`;

exports[`test renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-exit 1`] = `[]`;

exports[`test renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-stderr 1`] = `[]`;

exports[`test renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will output a hyperlink next to a cursor code.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will output a hyperlink next to a cursor code."]}}
",
  "{"event":"OUTPUT","data":"\\u001b[2K\\u001b]8;;https://listr2.kilic.dev\\u0007listr2\\u001b]8;;\\u0007","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will output a hyperlink next to a cursor code.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will output a hyperlink next to a cursor code."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will output a hyperlink next to a cursor code.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will output a hyperlink next to a cursor code."]}}
",
]
`;

exports[`verbose renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-exit 1`] = `[]`;

exports[`verbose renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-stderr 1`] = `[]`;

exports[`verbose renderer: osc-8 should preserve a bell-terminated osc-8 hyperlink: GuVrX0HJ82h7aCSBxfdRJm3LbCJ1scU4-stdout 1`] = `
[
  "[33m[STARTED][39m This task will output a hyperlink.
",
  "[OUTPUT] ]8;;https://listr2.kilic.devlistr2]8;;
",
  "[32m[COMPLETED][39m This task will output a hyperlink.
",
]
`;

exports[`verbose renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-exit 1`] = `[]`;

exports[`verbose renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-stderr 1`] = `[]`;

exports[`verbose renderer: osc-8 should preserve a hyperlink wrapped in sgr colors: k9Fj0ZFCmcutR9qKoIYBHDNGAzhDAjWP-stdout 1`] = `
[
  "[33m[STARTED][39m This task will output a colored hyperlink.
",
  "[OUTPUT] [32m]8;;https://listr2.kilic.devlistr2]8;;[39m
",
  "[32m[COMPLETED][39m This task will output a colored hyperlink.
",
]
`;

exports[`verbose renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-exit 1`] = `[]`;

exports[`verbose renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-stderr 1`] = `[]`;

exports[`verbose renderer: osc-8 should strip an injected cursor code next to a hyperlink: GIuPLb3vSEkIj8naBxgBbLow2xt0ZGky-stdout 1`] = `
[
  "[33m[STARTED][39m This task will output a hyperlink next to a cursor code.
",
  "[OUTPUT] [2K]8;;https://listr2.kilic.devlistr2]8;;
",
  "[32m[COMPLETED][39m This task will output a hyperlink next to a cursor code.
",
]
`;
